--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ pandas>=2.1.4
 scipy>=1.11.4
 scikit-learn>=1.4.2
 torch>=1.11.0
+shap>=0.47.0
+xgboost>=2.0.3
+joblib>=1.3.2
+pycaret>=3.3.2
+lightgbm>=4.6.0
+seaborn>=0.13.2
